--- a/src/test/resources/properties/database.properties
+++ b/src/test/resources/properties/database.properties
@@ -6,3 +6,7 @@ url=jdbc:mysql://3.131.35.165:3306/food_delivery_db
 server=3.131.35.165
 port=3306
 user=sdet
+
+#food_delivery_main_url = http://3.131.35.165:8082/
+
+food_delivery_url = http://localhost:8082/
