--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,31 @@
             <version>2.7</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.7</version>
+        </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>4.3.1</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-all -->
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-all</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
     </dependencies>
 
 
@@ -89,7 +114,7 @@
                             <!-- which tests do you want to include in the surefire plugin run in test phase -->
                             <includes>
                                 <!-- ** means anywhere under project directory -->
-                                <include>**/SmokeTestRunner.java</include>
+                                <include>**/*Runner.java</include>
                             </includes>
                             <testFailureIgnore>true</testFailureIgnore>
                         </configuration>
@@ -159,7 +184,7 @@
                             <!-- which tests do you want to include in the surefire plugin run in test phase -->
                             <includes>
                                 <!-- ** means anywhere under project directory -->
-                                <include>**/RegressionRunner.java</include>
+                                <include>**/*Runner.java</include>
                             </includes>
                             <testFailureIgnore>true</testFailureIgnore>
                         </configuration>
